<?xml version='1.0' encoding='UTF-8'?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Sensor" Id="{1e8c8953-d9ec-471b-85fd-d0dbdbf1215b}">
    <Declaration><![CDATA[
{attribute 'qualified_only'}
VAR_GLOBAL
    {attribute 'pytmc' := '
        pv: QRIX:SA:FLOATING
        io: i
    '}
    bFloating: BOOL;

    // YDF1
    {attribute 'pytmc' := '
        pv: QRIX:SA:DDS:YDF1
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2D LinearGaugeAmp (SC-HG1-ETC)]^Process Data(In)  TxPDO-Map^Response Data Unit1'}
    stYDF1: DUT_SensorHGS;
    nYDF1 AT %Q*: UDINT;

    // YDF2
    {attribute 'pytmc' := '
        pv: QRIX:SA:DDS:YDF2
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2D LinearGaugeAmp (SC-HG1-ETC)]^Process Data(In)  TxPDO-Map^Response Data Unit2'}
    stYDF2: DUT_SensorHGS;
    nYDF2 AT %Q*: UDINT;

    // YDF3
    {attribute 'pytmc' := '
        pv: QRIX:SA:DDS:YDF3
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2D LinearGaugeAmp (SC-HG1-ETC)]^Process Data(In)  TxPDO-Map^Response Data Unit3'}
    stYDF3: DUT_SensorHGS;
    nYDF3 AT %Q*: UDINT;

    // Height difference btw granite shelf and detector frame.
    {attribute 'pytmc' := '
        pv: QRIX:SA:DDS:HDF
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2D LinearGaugeAmp (SC-HG1-ETC)]^Process Data(In)  TxPDO-Map^Response Data Unit4'}
    stHDF: DUT_SensorHGS;

    // Granite TiltZ : Pitch
    {attribute 'pytmc' := '
        pv: QRIX:GS:INM:Z
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2B-03 AI_TiltSensor (EL3174-0002)]^AI Standard Channel 2^Value'}
    stGraniteP: DUT_Sensor;
    // Granite TiltX : Roll
    {attribute 'pytmc' := '
        pv: QRIX:GS:INM:X
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2B-03 AI_TiltSensor (EL3174-0002)]^AI Standard Channel 1^Value'}
    stGraniteR: DUT_Sensor;
    // Frame TiltZ : Pitch
    {attribute 'pytmc' := '
        pv: QRIX:DF:INM:Z
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2B-03 AI_TiltSensor (EL3174-0002)]^AI Standard Channel 4^Value'}
    stFrameP: DUT_Sensor;
    // Frame TiltX : Roll
    {attribute 'pytmc' := '
        pv: QRIX:DF:INM:X
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2B-03 AI_TiltSensor (EL3174-0002)]^AI Standard Channel 3^Value'}
    stFrameR: DUT_Sensor;

    {attribute 'pytmc' := '
        pv: QRIX:SA:GPT:PS1
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2B-04 PS_P (EL3064)]^AI Standard Channel 1^Value'}
    stPS1: DUT_Sensor;
    {attribute 'pytmc' := '
        pv: QRIX:SA:GPT:PS2
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2B-04 PS_P (EL3064)]^AI Standard Channel 2^Value'}
    stPS2: DUT_Sensor;
    {attribute 'pytmc' := '
        pv: QRIX:SA:GPT:PS3
        io: i
    '}
    {attribute 'TcLinkTo' := '	.iRawCnts	:= TIIB[Rack#2B-04 PS_P (EL3064)]^AI Standard Channel 3^Value'}
    stPS3: DUT_Sensor;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>